rgw: fix PUT on versioned bucket fails with NoSuchKey

Fixes: https://tracker.ceph.com/issues/48709

Signed-off-by: Mark Kogan <mkogan@redhat.com>